--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "jest": "^29.7.0",
+    "mongoose": "^8.8.0",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
