--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest ./tests --watchAll",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,11 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "jest": "^29.7.0",
-    "mongoose": "^8.8.0",
-    "supertest": "^7.0.0"
+    "mongoose": "^8.8.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@types/express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
