--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "jest ./tests --watchAll",
-    "start": "nodemon server.js"
+    "build": "tsc --build",
+    "start": "node ./dist/index.js",
+    "start:dev": "nodemon ./src/server.ts"
   },
   "repository": {
     "type": "git",
